Mike's Graph branch integration
Resolve of graph branch

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".Graphs">
+        </activity>
         <activity
             android:name=".AddActivity"
             android:parentActivityName=".MainActivity">
