--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:24.0.0'
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
     compile 'com.google.android.gms:play-services-appindexing:9.2.0'
+    compile 'com.jjoe64:graphview:4.0.1'
 }
