--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,17 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "2g"
     }
 }
 repositories {
@@ -27,11 +32,24 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
-    compile 'com.google.android.gms:play-services-appindexing:9.2.0'
     compile 'com.jjoe64:graphview:4.0.1'
     compile 'com.android.support:support-v4:24.0.0'
     compile 'com.android.support:recyclerview-v7:24.0.0'
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
 
+    // Google
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
+
+    // Firebase
+    compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    compile 'com.firebase:firebase-client-android:2.5.2'
+
+    // Dex
+    compile 'com.android.support:multidex:1.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
