--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name="BGLQueryActivity">
+            android:name=".BGLQueryActivity"
+            android:parentActivityName=".QueryActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".QueryActivity" />
+        </activity>
         <activity
             android:name=".PrescribeActivity"
             android:parentActivityName=".MainActivity">
