--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,27 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".QueryActivity" />
         </activity>
+        <activity android:name=".DietQueryActivity">
+            android:name=".DietQueryActivity"
+            android:parentActivityName=".QueryActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".QueryActivity" />
+        </activity>
+        <activity android:name=".MedicationQueryActivity">
+            android:name=".MedicationQueryActivity"
+            android:parentActivityName=".QueryActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".QueryActivity" />
+        </activity>
+        <activity android:name=".ExerciseQueryActivity">
+            android:name=".ExerciseQueryActivity"
+            android:parentActivityName=".QueryActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".QueryActivity" />
+        </activity>
         <activity
             android:name=".PrescribeActivity"
             android:parentActivityName=".MainActivity">
