--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,7 +86,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
 
-        <receiver  android:process=":remote" android:name="PrescribeNotificationReceiver"></receiver>
+        <receiver  android:process=":remote" android:name="PrescribeNotificationReceiver"/>
 
         <activity android:name=".firebase.SignInActivity" />
 
